@@ -63,8 +63,6 @@ sub componentNames
     }
 
     push (@components, 'webadmin/Language',
-                       'sysinfo/TimeZone',
-                       'sysinfo/DateTime',
                        'webadmin/AdminPort',
                        'sysinfo/HostName');
 
