@@ -1,4 +1,5 @@
 4.0
+	+ Moved configuration from NTP menu to System -> Date/Time
 	+ Set version to 4.0
 3.5
 	+ Set version to 3.5
