@@ -1,4 +1,5 @@
 4.0
+	+ New System -> Date/Time menu which also includes NTP when available
 	+ New header style
 	+ Search box moved from menu to header
 	+ Menu reorganization and re-style
